# SelfHosted_RAG_chatbot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  markdown_loader.py  pyproject.toml  requirements.txt  similarity_search.py
format/: chatml.yaml  marx.yaml
src/: hosted_database.py  llm_model.py  local_database.py  main.py  markdown_loader.py  settings.py  test.py  vectorbase.py
src/formatters/: __init__.py  formatter.py  marx_formatter.py  tiny_llama_formatter.py
src/generators/: hosted_llm.py  interfaces.py  llm_helpers.py  local_llm.py
