[tool.poetry]
name = "Self-hold_RAG_chatbot"
version = "0.1.0"
description = ""
authors = ["Xiyao and Peter"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = "^0.0.314"
fastapi = "^0.103.2"
llama-cpp-python = "^0.2.11"
unstructured = "^0.10.22"
markdown = "^3.5"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
qdrant-client = "^1.6.2"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:start"