[tool.poetry]
name = "Self-hosted_RAG_chatbot"
version = "0.1.0"
description = ""
authors = ["Xiyao and Peter"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.0.314"
fastapi = "^0.103.2"
unstructured = "^0.10.22"
markdown = "^3.5"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
qdrant-client = "^1.6.2"
uvicorn = "^0.23.2"
langchainhub = "^0.1.13"
openai = "^0.28.1"
llama-cpp-python = "^0.2.11"
asyncio = "^3.4.3"
atro-args = "^0.6.12"
pydantic-yaml = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:start"